--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "mini-css-extract-plugin": "^0.9.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "lodash": ">=4.17.19"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
-    "sweetalert2": "^9.17.0"
+    "sweetalert2": "^9.17.0",
+    "lodash": ">=4.17.19"
   }
 }
